force-app/main/default/objects/leaseworks__Journal_Entry__c/leaseworks__Journal_Entry__c.object-meta.xml
<CustomObject>
    <description>Aircraft Journal Entries</description>
    <label>Journal Lines</label>
    <nameField>
        <label>Journal Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journal Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>