force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Accounting_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Accounting_Date__c</fullName>
    <description>The financial accounting date of the journal entry.</description>
    <inlineHelpText>The financial accounting date of the journal entry. Date when the transaction is recorded in the ledger. Auto-filled with transaction date if within the accounting period; otherwise, uses the first date of the selected accounting period. For manual journals, filled with the journal date entered on creation.</inlineHelpText>
    <label>Accounting Date</label>
    <type>Date</type>
</CustomField>