force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Accrual_Method__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Accrual_Method__c</fullName>
    <inlineHelpText>Indicates the formula that was used to calculate the deferred revenue.</inlineHelpText>
    <label>Deferred Revenue Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>