force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Applied_to_Letter_of_Credit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Applied_to_Letter_of_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applied to Letter of Credit</label>
    <referenceTo>leaseworks__Letter_Of_Credit__c</referenceTo>
    <relationshipLabel>Journal Lines</relationshipLabel>
    <relationshipName>Journal_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>