force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Applied_To_Payable__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Applied_To_Payable__c</fullName>
    <formula>if(leaseworks__Payment__c!=null &amp;&amp; ISPICKVAL(leaseworks__Payment__r.leaseworks__Payment_Type__c,&apos;Paid via Payable Offset&apos;),
HYPERLINK( &apos;/&apos;+ leaseworks__Payment__r.leaseworks__Event_claim_payable__c, leaseworks__Payment__r.leaseworks__Event_claim_payable__r.Name ,&quot;_blank&quot;),if(leaseworks__Payment__c!=null &amp;&amp; ISPICKVAL(leaseworks__Payment__r.leaseworks__Payment_Type__c,&apos;Paid via SD Offset&apos;),
HYPERLINK( &apos;/&apos;+ leaseworks__Payment__r.leaseworks__Cash_Security_Deposit__c, leaseworks__Payment__r.leaseworks__Cash_Security_Deposit__r.Name ,&quot;_blank&quot;),
null ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applied To Payable</label>
    <type>Text</type>
</CustomField>