force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment Bank Account</description>
    <label>Z_Unused_2106 Bank Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Journal Entries</relationshipLabel>
    <relationshipName>Journal_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>