force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Bank_Account_Analysis_Code__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bank_Account_Analysis_Code__c</fullName>
    <description>Captures the Analysis Code from the linked Bank Account upon creation.</description>
    <inlineHelpText>Captures the Analysis Code from the linked Bank Account upon creation.</inlineHelpText>
    <label>Bank Account (Analysis Code)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>