force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Chart_Of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Chart_Of_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populate the Chart of Account on the Journal Lines directly.</description>
    <label>_Chart Of Accounts</label>
    <referenceTo>leaseworks__Chart_Of_Accounts__c</referenceTo>
    <relationshipLabel>Journal Lines</relationshipLabel>
    <relationshipName>Journal_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>