force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Credit_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Credit_F__c</fullName>
    <formula>if(leaseworks__Amount__c &lt;= 0,-1*leaseworks__Amount__c,0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused 202507 Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>