force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Currency__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Currency__c</fullName>
    <description>Indicates currency used for recording transactions in this ledger.</description>
    <inlineHelpText>Indicates currency used for recording transactions in this ledger.</inlineHelpText>
    <label>Ledger Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
                <default>true</default>
                <label>USD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>