force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Debit_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Debit_F__c</fullName>
    <formula>if(leaseworks__Amount__c &gt;=0,leaseworks__Amount__c,0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>