force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Debit_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Debit_Number__c</fullName>
    <description>The debit amount recorded in the transaction currency.</description>
    <formula>IF(
    leaseworks__isFxGainLoss__c,
    0.0,
    IF(leaseworks__Amount__c &gt;= 0,leaseworks__Amount__c,0.0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The debit amount recorded in the transaction currency.</inlineHelpText>
    <label>Debit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>