force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__GL_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__GL_Integration_Status__c</fullName>
    <defaultValue>&apos;Not Sent&apos;</defaultValue>
    <label>GL Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Not Sent</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Integrated to GL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>