force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__GL_Post_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__GL_Post_Error_Message__c</fullName>
    <label>GL Post Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>