force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Hidden_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Hidden_Transaction_Type__c</fullName>
    <description>This field is populating from the Transaction_Type_F__c Formula Field</description>
    <label>_Transaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>