force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Is_Average_SLR_Jls__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Is_Average_SLR_Jls__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will set to true if the JL is created for Average SLR</description>
    <label>_Is Average SLR Jls</label>
    <type>Checkbox</type>
</CustomField>