force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Is_Overriden_JLs__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Is_Overriden_JLs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will set to true if the JL is created for Overridden Average SLR Amount</description>
    <label>_Is Overriden Average SLR JLs</label>
    <type>Checkbox</type>
</CustomField>