force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__isCash__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__isCash__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies whether the JE is for cash</description>
    <label>_isCash</label>
    <type>Checkbox</type>
</CustomField>