force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__isFxGainLoss__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__isFxGainLoss__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the Journal Line as related to Foreign Exchange (FX) Gain or Loss.</description>
    <inlineHelpText>Automatically set when exchange rate differences create an FX Gain/Loss entry.</inlineHelpText>
    <label>_IsFxGainLoss</label>
    <type>Checkbox</type>
</CustomField>