force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Journal_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Journal_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date of the Journal Entry</description>
    <inlineHelpText>Date of the Journal Entry</inlineHelpText>
    <label>Z_Unused_2206 Journal Date</label>
    <type>Date</type>
</CustomField>