force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Journal_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Journal_Status__c</fullName>
    <label>Journal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Unposted</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>