force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Ledger_Amount_Field__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Ledger_Amount_Field__c</fullName>
    <description>Amount posted in ledger currency.</description>
    <formula>IF(
    NOT(leaseworks__Multicurrency_Enabled__c),
    leaseworks__Amount__c,
    IF(
        leaseworks__isFxGainLoss__c,
        IF(
            ISBLANK(leaseworks__Amount__c),
            NULL,
            leaseworks__Amount__c  
        ),
        IF(
            ISBLANK(leaseworks__Exchange_Rate__c),
            NULL,
            IF(
                leaseworks__Exchange_Rate__c = 0,
                0,
                leaseworks__Amount__c * leaseworks__Exchange_Rate__c
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount posted in ledger currency.</inlineHelpText>
    <label>Ledger Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>