force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Lessee_Analysis_Code__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee_Analysis_Code__c</fullName>
    <description>Captures the Analysis Code from the linked Lessee upon creation.</description>
    <inlineHelpText>Captures the Analysis Code from the linked Lessee upon creation.</inlineHelpText>
    <label>Lessee (Analysis Code)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>