force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Payout__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payout</label>
    <referenceTo>leaseworks__Payout__c</referenceTo>
    <relationshipLabel>Journal Lines</relationshipLabel>
    <relationshipName>Journal_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>