force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Sub_Invoice__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Sub_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>_Sub_Invoice</label>
    <referenceTo>leaseworks__Invoice__c</referenceTo>
    <relationshipLabel>Journal Lines (_Sub_Invoice)</relationshipLabel>
    <relationshipName>Journal_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>