force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Supplemental_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Supplemental_Rent__c</fullName>
    <formula>if(!ISBLANK(leaseworks__Invoice_Line_Item__c),HYPERLINK(&apos;/&apos;+ leaseworks__Invoice_Line_Item__r.leaseworks__Assembly_MR_Info__c , leaseworks__Invoice_Line_Item__r.leaseworks__Assembly_MR_Info__r.Name ,&apos;_self&apos;),If(!ISBLANK(  leaseworks__Payable_Line_Item__c  ),HYPERLINK(&apos;/&apos;+   leaseworks__Payable_Line_Item__r.leaseworks__Supplemental_Rent__c   ,   leaseworks__Payable_Line_Item__r.leaseworks__Supplemental_Rent__r.Name  ,&apos;_self&apos;),HYPERLINK(&apos;/&apos;+ leaseworks__Invoice_Line_Item__r.leaseworks__Assembly_MR_Info__c , leaseworks__Invoice_Line_Item__r.leaseworks__Assembly_MR_Info__r.Name ,&apos;_self&apos;)))</formula>
    <label>Supplemental Rent</label>
    <type>Text</type>
</CustomField>