force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Transaction_Date__c</fullName>
    <formula>leaseworks__Transaction_Date_Hidden__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>