force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Transaction_Date_Hidden__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Transaction_Date_Hidden__c</fullName>
    <description>This is the hidden field to populate the Transaction Date formula field</description>
    <label>_Transaction Date</label>
    <type>Date</type>
</CustomField>