force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Transaction_Type__c</fullName>
    <description>Type of transaction this mapping would apply to - Aircraft Sale or Aircraft Purchase)</description>
    <inlineHelpText>Type of transaction this mapping would apply to - Aircraft Sale or Aircraft Purchase)</inlineHelpText>
    <label>Journal Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aircraft Sale</fullName>
            </value>
            <value>
                <fullName>Aircraft Purchase</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Aircraft MR</fullName>
            </value>
            <value>
                <fullName>Security Deposit</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Engine MR</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Head Lease/Sub Lease Rent</fullName>
            </value>
            <value>
                <fullName>Head Lease/Sub Lease Aircraft MR</fullName>
            </value>
            <value>
                <fullName>Head Lease/Sub Lease Security Deposit</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>