force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Y_Hidden_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Amount__c</fullName>
    <formula>if(OR(isBlank(leaseworks__Credit__c),leaseworks__Credit__c == 0), leaseworks__Debit__c ,leaseworks__Credit__c)</formula>
    <label>Z_Unused_2309 {Amount}</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>