force-app/main/default/objects/leaseworks__Journal_Entry__c/fields/leaseworks__Y_Hidden_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Serial_Number__c</fullName>
    <formula>Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2206 Serial Number</label>
    <type>Text</type>
</CustomField>