force-app/main/default/objects/leaseworks__Journal_Entry__c/validationRules/leaseworks__validateJournalNumberOnJournalLines.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__validateJournalNumberOnJournalLines</fullName>
    <active>true</active>
    <description>User cannot update the auto-generated Journal names</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Name)),
ISCHANGED(Name)
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You cannot modify a system-generated sequence.</errorMessage>
</ValidationRule>